--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -10,5 +10,6 @@
 
 	<p>
 		<%= link_to "Remix", "#", class: "btn btn-large btn-primary remix" %>
+		<%= link_to "Sign Up and Haiku!", new_user_registration_path, class: "btn pull-right btn-primary" %>
 	</p>
 </div>
