Add Haikus Scaffold

--- a/app/assets/stylesheets/styles.css.scss
+++ b/app/assets/stylesheets/styles.css.scss
@@ -5,7 +5,8 @@ $navbarBackground: #29264d;
 @import 'bootstrap-responsive';
 
 body{
-	font-family: arial,helvetica,sans-serif;
+	font-family: arial,helvetica,sans-serif;	
+	background-image: url("/Users/ryankoven/Desktop/red.jpg");
 }
 
 a{
